# payment-orchestrator

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  index.html  mkdocs.yml  nginx.conf  pyproject.toml  ship-it.sh
.docker/configs/: grafana-dashboards.yaml  grafana-datasources.yaml  loki-config.yaml  mimir-config.yaml  otel-collector-config.yaml  promtail-config.yaml  rabbitmq.conf  tempo-config.yaml
.docker/configs/dashboards/: payment-orchestrator.json
.docker/rabbitmq/: Dockerfile
.gemini/: settings.json
.github/workflows/: ci.yml  docs.yml
api/: index.html
app/: main.py
app/application/: events.py
app/application/ports/: billing.py  repo.py  transfer.py
app/application/use_cases/: generate_invoices.py  process_payment.py
app/domain/: events.py  exceptions.py  validators.py
app/domain/entities/: invoice.py  transfer.py
app/domain/value_objects/: money.py
app/infra/: config.py  database.py  observability.py  worker.py
app/infra/adapters/starkbank_adapter/: billing_adapter.py  client.py  transfer_adapter.py
app/infra/api/: dependencies.py
app/infra/api/v1/: billing.py  transfers.py  webhooks.py
app/infra/repositories/: base.py  models.py  payment_repo.py
architecture/: index.html
architecture_decisions/: index.html
docs/: api.md  architecture.md  architecture_decisions.md  index.md  observability.md  testing.md
migrations/: env.py
migrations/versions/: acd29fa7b85d_initial_schema.py
observability/: index.html
scripts/: dry_run_check.py  entrypoint.sh  generate_keys.py  register_webhook.py
search/: search_index.json
terraform/aws/: deploy.sh  main.tf  outputs.tf  startup.sh  variables.tf
terraform/aws/bootstrap/: main.tf
testing/: index.html
tests/: conftest.py
tests/e2e/: test_payment_flow.py
tests/integration/: test_api_endpoints.py  test_concurrency_race_condition.py
tests/load/: load_test_webhooks.js
tests/unit/: test_observability.py  test_starkbank_adapter.py  test_use_cases.py
