[project]
name = "payment-orchestrator"
version = "0.1.0"
description = "Production-grade StarkBank Sandbox Invoice & Transfer Automation — Hexagonal Architecture, Async-first, LGTM Observability"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[rabbitmq]>=5.6.3",
    "faker>=40.12.0",
    "fastapi>=0.135.3",
    "kombu>=5.4",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-celery>=0.61b0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "starkbank>=2.33.0",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.9",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.8",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["migrations/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
